--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "times",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://amjadz.github.io/timesproject/",
+  "homepage": "https://amjadz.github.io/times/",
   "dependencies": {
     "gh-pages": "^1.1.0",
     "react": "^16.2.0",
@@ -13,6 +13,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -a -e timesproject"
+    "deploy": "gh-pages -d build"
   }
 }
