--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "times",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://amjadz.github.io/times",
+  "homepage" : "https://amjadz.github.io/timesproject",
   "dependencies": {
     "gh-pages": "^1.1.0",
     "react": "^16.2.0",
